# chirper

./: .gitignore  Makefile  README.md  db.sqlite3  dump.rdb  hello.py  manage.py  pyproject.toml  requirements.txt
chirper/: forms.py  models.py  urls.py  views.py
chirper/migrations/: 0001_initial.py  0002_chirp_like_counter.py  0002_chirp_likes.py  0003_merge_0002_chirp_like_counter_0002_chirp_likes.py  0003_rename_like_counter_chirp_likes.py  0004_alter_chirp_user.py  0004_merge_20250308_0231.py  0005_chirp_parent.py  0006_like.py  0007_merge_0004_merge_20250308_0231_0006_like.py
conf/: settings.py  urls.py
home/: urls.py  views.py
home/static/: script.js  styles.css
home/templates/account/: login.html  signup.html
home/templates/home/: base.html  home.html  index.html  profile.html
home/templates/partials/: like_count.html  reply.html
home/templates/registration/: logged_out.html  login.html  signup.html
src/chirper/: views.py
src/chirper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/conf/: asgi.py  consumers.py  routing.py  settings.py  urls.py
src/home/: urls.py  views.py
src/home/templates/home/: index.html  profile.html
