[project]
name = "chirper"
version = "0.1.0"
description = "A Twitter/X like web application, named Chirper, built using Django."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.6",
    "bpython==0.25",
    "colorama==0.4.6",
    "cx_Oracle==8.3.0",
    "docutils==0.21.2",
    "ipdb==0.13.13",
    "ipython==8.12.3",
    "numpy==2.2.3",
    "oracledb==3.0.0",
    "Pillow==11.1.0",
    "pywatchman==2.0.0",
    "PyYAML==6.0.2",
    "tblib==3.0.0",
    "typing_extensions==4.12.2"
]
